Ajouts infos Rafael

--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
                     <a href="#">Clément</a>
                     <a href="#">Eden</a>
                     <a href="#">Mathis</a>
-                    <a href="#">Rafael</a>
+                    <a href="pages/rafael.html">Rafael</a>
                     <a href="#">Adam Z.</a>
                 </div>
             </div>
@@ -69,7 +69,14 @@
             <div class="quote" id="rafael" data-aos="zoom-in-left">
                 <div class="quote-content">
                     <h4>Rafael</h4>
-                    <p>Le meilleur professeur</p>
+                    <p>
+                        Merci beaucoup pour ceux deux années de NSI que je ne suis pas prêt
+                        d'oublier ! Grâce à vous, j'ai pu rester dans le domaine de
+                        l'informatique qui me passionne, et que j'adore encore
+                        plus maintenant. Vous m'avez permis d'avancer sereinement vers les
+                        études supérieures, et je ne pourrai jamais vous remercier assez
+                        pour ça.
+                    </p>
                 </div>
             </div>
             <div class="quote" id="antoine" data-aos="zoom-in-right">
