--- a/pages/rafael.html
+++ b/pages/rafael.html
@@ -1,3 +1,4 @@
+@ -0,0 +1,38 @@
 <!DOCTYPE html>
 <html lang="fr" data-theme='dark'>
     <head>
@@ -37,25 +38,9 @@
             </div>
         </header>
         <main>
-            <div id="creators">
-                <h2>Par :</h2>
-                <ul>
-                    <li>Adam BELKACEM BOUZIDA</li>
-                    <li>Djibril BBENIKHLEF</li>
-                    <li>Lucien GABAIX-HIALE</li>
-                    <li>Renan KAELBEL</li>
-                    <li>Antoine KAYALI</li>
-                    <li>Clément KOENIGUER</li>
-                    <li>Eden KWETE MIKOMBO</li>
-                    <li>Mathis LAVIOLETTE</li>
-                    <li>Rafael VECLIN</li>
-                    <li>Adam ZELISKO</li>
-                </ul>
-                <h2>Avec l'aide de :</h2>
-                <ul>
-                    <li>Victor AVERSENG</li>
-                </ul>
-            </div>
+        <p>
+            Etudes : Cycle ingénieur en anglais à Efrei <br>
+            Contact : rafael.veclin@gmail.com
+        </p>
         </main>
     </body>
-</html>
